--- a/camera_app/src/app/tab2/tab2.page.html
+++ b/camera_app/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Camera
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,11 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Camera</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <h1>Click on the camara icon to take a picture!</h1>
 
   <ion-fab>
     <ion-fab-button (click) ="takePhoto()">
