--- a/camera_app/src/app/tab4/tab4.page.html
+++ b/camera_app/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Gallery
+     Favourites 
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Gallery</ion-title>
+      <ion-title size="large">Favourites</ion-title>
     </ion-toolbar>
   </ion-header>
 
